# apftool

./: .gitignore  README.md  apftool.py  pyproject.toml  test.py
apftool/: __init__.py  af2tool.py  apftool.py  otabtool.py  test.py  wbmptool.py
pages/: apf_runtime.py  app.js  index.html  styles.css
tooling/: afx.sh  apf-for-xviewer.py  apf.xml  apfcli.py  apfgui.py  apfviewer-gpt.py  apfviewer.py  generaterandomaf2.py
tooling/pages/: apf_core.py
